server-configuration/vespa/content-node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vespa-content
  labels:
    app: vespa
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vespa
      role: content
  template:
    metadata:
      labels:
        app: vespa
        role: content
    spec:
      containers:
        - name: vespa-content
          image: vespa-engine/vespa
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: vespa-content
spec:
  selector:
    app: vespa
    role: content
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  clusterIP: None
